src/test/deca/syntax/invalid/ClassFieldSansType.deca
//Field dans une classe sans type

class Thing {
    
    i = 0;

}
